# software-engineering-fastapi-app

./: .dockerignore  .env  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml  test.yml
app/: __init__.py  main.py  models.py  routes.py
app/tests/: test_routes.py
postman/: postman_collection.json
services/shorturl/: Dockerfile  alembic.ini  entrypoint.sh  main.py
services/shorturl/alembic/: env.py
services/shorturl/alembic/versions/: 001_initial.py
services/shorturl/app/: __init__.py  models.py  routes.py  schemas.py
services/shorturl/tests/: test_routes.py
services/todo/: Dockerfile  alembic.ini  entrypoint.sh  main.py
services/todo/alembic/: env.py
services/todo/alembic/versions/: 001_initial.py
services/todo/app/: __init__.py  models.py  routes.py  schemas.py
services/todo/tests/: test_routes.py
